create custom palette color

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
+              "src/my-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
